Rendering links to companies in carrer blocks, corrections and additions to the resume itself after jumping ship from Global Relay

--- a/tsx/src/App.mainblocks.css
+++ b/tsx/src/App.mainblocks.css
@@ -27,11 +27,15 @@ main article header {
     padding: 0.2em 0 0.5em 0.5em;
 }
 
-main article h1 {
-    font-size: 1em;
+main article h1, main article h2 {
     font-weight: bold;
     text-align: left;
     margin-left: 1em;
+
+}
+
+main article h1 {
+    font-size: 1.1em;
 }
 
 main article p {
